Fix logic for retrying BattOr initialization after a timeout

Unfortunately, due to the way this code relies on posting a delayed
tasks that gets run at a later time, writing a unit test is very
difficult.

BUG=678659

Review-Url: https://codereview.chromium.org/2618693003
Cr-Commit-Position: refs/heads/master@{#441770}

Former-commit-id: a3e1e654c70726bbf429fb8a3f75e9956c78a037