tools/battor_agent/battor_agent.cc
@@ -545,7 +545,6 @@ void BattOrAgent::OnActionTimeout() {
       } else {
         CompleteCommand(BATTOR_ERROR_TOO_MANY_INIT_RETRIES);
       }
-
       return;
 
     // TODO(crbug.com/672631): There's currently a BattOr firmware bug that's
@@ -563,12 +562,12 @@ void BattOrAgent::OnActionTimeout() {
       } else {
         CompleteCommand(BATTOR_ERROR_TOO_MANY_START_TRACING_RETRIES);
       }
+      return;
 
     default:
       CompleteCommand(BATTOR_ERROR_TIMEOUT);
+      timeout_callback_.Cancel();
   }
-
-  timeout_callback_.Cancel();
 }
 
 void BattOrAgent::SendControlMessage(BattOrControlMessageType type,
